--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Our first node.js server",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/opsingh861/my-first-server/issues"
   },
-  "homepage": "https://github.com/opsingh861/my-first-server#readme"
+  "homepage": "https://github.com/opsingh861/my-first-server#readme",
+  "dependencies": {
+    "nodemon": "^3.0.1"
+  }
 }
