--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/opsingh861/my-first-server#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "nodemon": "^3.0.1"
   }
 }
